# tinyml-deployer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: blog_post.md
examples/sine_model/: README.md  sine_model.tflite  train.py
scripts/: README.md  record_demo.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_benchmark.py  test_cli.py  test_codegen.py  test_converters.py  test_deployer.py  test_quantizer.py  test_targets.py
tinyml_deployer/: __init__.py  analyzer.py  benchmark.py  cli.py  codegen.py  converters.py  deployer.py  quantizer.py  targets.py
